fix height of bag details adjust z-index nav

--- a/public/scss/layout/coffee/_coffee-bag.scss
+++ b/public/scss/layout/coffee/_coffee-bag.scss
@@ -64,7 +64,7 @@
 
 	.total, .amount {
 		display: block;
-		height: 100%;
+		height: 50%;
 		width: 70%; 
 		color: $white;
 		text-align: center;
