--- a/public/scss/layout/nav/_nav.scss
+++ b/public/scss/layout/nav/_nav.scss
@@ -7,7 +7,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;  
-	z-index: 500;
+	z-index: 200;
 }
 
 #nav .wrapper {
